# demo-yolo-cli

./: .gitignore  README.md  coco8.yaml  main.py  pyproject.toml
coco8/labels/: train.cache  val.cache
coco8/xlabels/train/: 000000000009.json  000000000025.json  000000000030.json  000000000034.json
utils/: covert_hbb_txt_2_json.py  gen_yolo_yaml.py
