[project]
name = "yolocli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pytubefix>=10.3.6",
    "ultralytics>=8.4.11",
    "x-anylabeling-cvhub>=3.3.9",
]

[tool.uv]
override-dependencies = [
    "pyqt5-qt5==5.15.2; sys_platform == 'win32'",
    "pyqtwebengine-qt5==5.15.2; sys_platform == 'win32'",
    "pyqt5==5.15.10; sys_platform == 'win32'",
    "pyqtwebengine==5.15.6; sys_platform == 'win32'"
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]